<resources>
    <string name="app_name">ANDROID TEST </string>
    <string name="count_text_view">0</string>
    <string name="increase_button">Increase</string>
    <string name="decrease_button">Decrease</string>
    <string name="toast_message">محمد إيهاب عبد المطلب الطيب ضو البيت</string>
    <string name="button_zero">zero</string>
    <string name="text_head">The head line</string>
    <string name="subheadin_artical">Articale subtitle</string>
    <string name="edittext_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>
    <string name="edittext_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>
    <string name="edittext_share">\'Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>
    <string name="article_text">In a vault deep inside Abbey Road Studios in London — protected by an unmarked, triple-locked, police-alarmed door — are something like 400 hours of unreleased Beatles recordings, starting from June 2, 1962 and ending with the very last tracks recorded for the <i>Let It Be</i> album. The best of the best were released by Apple Records in the form of the 3-volume Anthology series.
        For more information, see the Beatles Time Capsule at www.rockument.com.
\n\n
This volume starts with the first new Beatle song, “Free as a Bird” (based on a John Lennon demo, found only on <i>The Lost Lennon Tapes Vol. 28</i>, and covers the very earliest historical recordings, outtakes from the first albums, and live recordings from early concerts and BBC Radio sessions.
\n\n
<b>Highlights include:</b>
\n\n
<b><i>Cry for a Shadow</i></b> - Many a Beatle fanatic started down the outtake road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs.
\n\n
<b><i>My Bonnie</i></b> and <b><i>Ain’t She Sweet</i></b> — At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal).
\n\n
<b><i>Searchin</i></b> — A Jerry Leiber - Mike Stoller comedy song that was a hit for the Coasters in 1957, and a popular live favorite of the Beatles. The Coasters also had a hit with “Besame Mucho” and the Beatles covered that song as well. Ringo Starr had by now replaced Pete Best on drums. The high falsetto is George, who also plays a hesitant lead guitar. This is from their first audition for Decca Records in London on Jan 1., 1962, live in the studio. The Grateful Dead would later cover “Searchin” with a similar arrangement, Pigpen doing the Paul vocals. A live version is available on outtake records featuring the Dead joined by the Beach Boys!
\n\n
<b><i>Love Me Do</i></b> — An early version of the song, played a bit slower and with more of a blues feeling, and a cool bossa-nova beat in middle. Paul had to sing while John played harmonica — a first for the group. Pete Best played drums on this version.
\n\n
<b><i>She Loves You – Till There Was You – Twist and Shout</i></b> — Live at the Princess Wales Theatre by Leicester Square in London, attended by the Queen. “Till There Was You” (by Meredith Wilson) is from the musical The Music Man and a hit for Peggy Lee in 1961. Before playing it, Paul said it was recorded by his favorite American group, “Sophie Tucker” (which got some laughs). At the end, John tells the people in the cheaper seats to clap their hands, and the rest to “rattle your jewelry” and then announces “Twist and Shout” (a song by Bert Russell and Phil Medley that was first recorded in 1962 by the Isley Brothers). A film of the performance shows the Queen smiling at John’s remark.
\n\n
<b><i>Leave My Kitten Alone</i></b> — One of the lost Beatle songs recorded during the “Beatles For Sale” sessions but never released. This song, written by Little Willie John, Titus Turner, and James McDougal, was a 1959 R&amp;B hit for Little Willie John and covered by Johnny Preston before the Beatles tried it and shelved it. A reference to a “big fat bulldog” may have influenced John’s “Hey Bulldog” (Yellow Submarine album), which is a similar rocker.
\n\n
<b><i>One After 909</i></b> — A song recorded for the <i>Let It Be</i> album was actually worked on way back in the beginning, six years earlier. This take shows how they did it much more slowly, with an R&amp;B feel to it.
</string>
    <string name="title_activity_basic">BasicActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="message_received">Message Received</string>
    <string name="enter_your_message_here">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_message_reply">Reply Received</string>
    <string name="the_luancher_screen_textView">the luancher screen</string>
    <string name="activities_tutorial_button">Activities tutorial</string>
    <string name="send_btn">send</string>
    <string name="send_message_editText">send a message</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="add_item_button">add item</string>
    <string name="activity_coding_challenge_5">Activity coding challenge 5</string>
    <string name="button_implicit_intent">button implicit intent</string>
    <string name="string_button_implicit_intent">implicent intents</string>
    <string name="type_operand_one_hint">Type Operand 1</string>
    <string name="type_operand_two_hint">Type Operand 2</string>
    <string name="add_operation_text">Add</string>
    <string name="sub_operation_text">Sub</string>
    <string name="div_operation_text">Div</string>
    <string name="mul_operation_text">Mul</string>
    <string name="computationError">Error</string>
    <string name="title_activity_ordering_app">Cafe order</string>
    <string name="desserts_ordering_cafe">Desserts ordering cafe</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_1">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="ice_cream_2">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name_labl">Name</string>
    <string name="all_orders">Orders Transaction</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="address_lable">Address</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="item_1">item 1</string>
    <string name="item_2_checkBox">item 2</string>
    <string name="item_3_checkBox">item 3</string>
    <string name="checkboxes">checkBoxes</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string name="menu_chal_text">
        This textbook is for a first course on computer networking. It can be used in both computer science and
electrical engineering departments. In terms of programming languages, the book assumes only that the
student has experience with C, C++, Java, or Python (and even then only in a few places). Although this book
is more precise and analytical than many other introductory computer networking texts, it rarely uses any
mathematical concepts that are not taught in high school. We have made a deliberate effort to avoid using any
advanced calculus, probability, or stochastic process concepts (although we’ve included some homework
problems for students with this advanced background). The book is therefore appropriate for undergraduate
courses and for first-year graduate courses. It should also be useful to practitioners in the telecommunications
industry.
What Is Unique About This Textbook?
The subject of computer networking is enormously complex, involving many concepts, protocols, and
technologies that are woven together in an intricate manner. To cope with this scope and complexity, many
computer networking texts are often organized around the “layers” of a network architecture. With a layered
organization, students can see through the complexity of computer networking—they learn about the distinct
concepts and protocols in one part of the architecture while seeing the big picture of how all parts fit together.
From a pedagogical perspective, our personal experience has been that such a layered approach indeed
works well. Nevertheless, we have found that the traditional approach of teaching—bottom up; that is, from the
physical layer towards the application layer—is not the best approach for a modern course on computer
networking.
A Top-Down Approach
Our book broke new ground 16 years ago by treating networking in a top-down­manner—that is, by
beginning at the application layer and working its way down toward the physical layer. The feedback we
received from teachers and students alike have confirmed that this top-down approach has many advantages
and does indeed work well pedagogically. First, it places emphasis on the application layer (a “high growth
area” in networking). Indeed, many of the recent revolutions in­computer networking—including the Web,
peer-to-peer file sharing, and media streaming—have taken place at the application layer. An early emphasis
on application-layer issues differs from the approaches taken in most other texts, which have only a small
amount of material on network applications, their requirements, application-layer paradigms (e.g., client-server
and peer-to-peer), and application programming­interfaces.­Second, our experience as instructors (and that
of many instructors who have used this text) has been that teaching networking applications near the
beginning of the course is a powerful motivational tool
    </string>
    <string name="alert_text_view">Hello World! Tap to test the alert</string>
    <string name="alert_button">alert</string>
    <string name="date_text">Tap the button to pick the date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_btn">Time</string>
    <string name="date_btn">date</string>
</resources>