<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LauncherActivity">

    <LinearLayout
        android:id="@+id/linear_layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/head_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#9C8C9EFF"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/the_luancher_screen_textView"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/tut_activities_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/activities_tutorial_button" />

        <Button
            android:id="@+id/button_challeng_coding_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/activity_coding_challenge_5" />

        <Button
            android:id="@+id/button_implicit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/string_button_implicit_intent" />

        <Button
            android:id="@+id/button_debugger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="openDebuer"
            android:text="The debugger" />

        <Button
            android:id="@+id/button_support_lib"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="goToSupport"
            android:text="support libraries" />

        <Button
            android:id="@+id/button_clickable_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="goToShop"
            android:text="Clickable image" />

    </LinearLayout>
</ScrollView>