<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScrollTextActivity">

    <TextView
        android:id="@+id/article_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="@dimen/padding_regular"
        android:text="@string/text_head"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/article_heading">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/article_subheading"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:padding="@dimen/padding_regular"
                android:text="@string/subheadin_artical"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autoLink="web"
                android:lineSpacingExtra="5sp"
                android:padding="@dimen/padding_regular"
                android:text="@string/article_text"
                android:textColor="@android:color/black"
                android:textColorLink="#F80000" />
        </LinearLayout>


    </ScrollView>


</RelativeLayout>